--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
+    "form-data": "^4.0.5",
     "googleapis": "^105.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
